<resources>
    <string name="app_name">UI</string>
    <string name="filter_none">Original</string>
    <string name="filter_amaro">Amaro</string>
    <string name="filter_brannan">Brannan</string>
    <string name="filter_brooklyn">Brooklyn</string>
    <string name="filter_Earlybird">EarlyBird</string>
    <string name="filter_freud">Freud</string>
    <string name="filter_hefe">Hefe</string>
    <string name="filter_hudson">Hudson</string>
    <string name="filter_inkwell">Inkwell</string>
    <string name="filter_kevin">Kevin</string>
    <string name="filter_lomo">Lomo</string>
    <string name="filter_n1977">1977</string>
    <string name="filter_nashville">Nashville</string>
    <string name="filter_pixar">Pixar</string>
    <string name="filter_rise">Rise</string>
    <string name="filter_sierra">Sierra</string>
    <string name="filter_sutro">Sutro</string>
    <string name="filter_toastero">Toaster2</string>
    <string name="filter_valencia">Valencia</string>
    <string name="filter_walden">Walden</string>
    <string name="filter_xproii">XproII</string>
    <string name="filter_whitecat">WhiteCat</string>
    <string name="filter_blackcat">BlackCat</string>
    <string name="filter_romance">Romance</string>
    <string name="filter_sakura">Sakura</string>
    <string name="filter_antique">Antique</string>
    <string name="filter_beauty">Beauty</string>
    <string name="filter_calm">Calm</string>
    <string name="filter_cool">Cool</string>
    <string name="filter_emerald">Emerald</string>
    <string name="filter_evergreen">Evergreen</string>
    <string name="filter_fairytale">Fairytale</string>
    <string name="filter_healthy">Healthy</string>
    <string name="filter_latte">Latte</string>
    <string name="filter_nostalgia">Nostalgia</string>
    <string name="filter_tender">Tender</string>
    <string name="filter_warm">Warm</string>
    <string name="filter_sweets">Sweets</string>
    <string name="filter_sunrise">Sunrise</string>
    <string name="filter_sunset">Sunset</string>
    <string name="filter_skinwhiten">SkinWhiten</string>
    <string name="filter_crayon">Crayon</string>
    <string name="filter_sketch">Sketch</string>

    <string name="edit_filter">Filter</string>
    <string name="edit_edit">Edit</string>
    <string name="edit_adds">Adds</string>
    <string name="edit_frame">Frame</string>
    <string name="edit_beauty">Beauty</string>

    <string name="edit_contrast">Contrast</string>
    <string name="edit_exposure">Exposure</string>
    <string name="edit_vibrance">Vibrance</string>
    <string name="edit_saturation">Saturation</string>
    <string name="edit_sharpness">Sharpness</string>
    <string name="edit_brightness">Bright</string>
    <string name="edit_hue">Hue</string>
    <string name="filter_et">ET</string>
    <string name="filter_big_eye">BigEye</string>
    <string name="filter_half_pinch">HalfPinch</string>
    <string name="filter_pear_face">PearFace</string>
    <string name="filter_stretch">Stretch</string>


    <string name="blueberry">BLUEBERRY</string>
    <string name="dreamy">DREAMY</string>
    <string name="habana">HABANA</string>
    <string name="happy">HAPPY</string>
    <string name="misty">MISTY</string>
    <string name="spring">SPRING</string>
    <string name="cold">COLD</string>
    <string name="frog">FROG</string>
    <string name="kd100">KD100</string>

    <string name="dark">DARK</string>
    <string name="fsfp100cc">FSFP100CC</string>
    <string name="lyon">LYON</string>
    <string name="m106">M106</string>
    <string name="m109">M109</string>
    <string name="s114">S114</string>


    <string name="harvest">HARVEST</string>
    <string name="open">open</string>
    <string name="cancel">cancel</string>
    <string name="eyemagnify">Eye magnifying</string>
    <string name="faceSculpt">Chin Slimming</string>
    <string name="skinPerfection">Skin Whitening</string>
    <string name="skinRemoveBlemishes">Blemish Removal</string>
    <string name="skinSaturation">Skin Saturation</string>
    <string name="skinTenderness">Skin Tenderness</string>
    <string name="face_beautify">face beautify</string>
    <string name="part_beauty">Eye &#038; Chin</string>
    <string name="face_beautify_second">Skin</string>
    <string name="take_photo">take a photo</string>
    <string name="give_gift">gift</string>
    <string name="expresss_sticker">expression</string>
    <string name="sticker">Stickers</string>
</resources>
