<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/half_transparent_black"
    android:orientation="vertical"
    android:padding="6dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="6dp"
        android:text="@string/face_beautify_second"
        android:textColor="@android:color/white" />

    <ImageView
        android:id="@+id/switch_beauty_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="6dp"
        android:gravity="center"
        android:src="@drawable/guan" />

    <TableLayout
        android:id="@+id/layout_beauty_adjust_second"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                style="@style/beauty_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skinPerfection" />

            <SeekBar
                android:id="@+id/seekbar_skinPerfection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/text_skinPerfection"
                style="@style/beauty_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                style="@style/beauty_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skinRemoveBlemishes" />

            <SeekBar
                android:id="@+id/seekbar_skinRemoveBlemishes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

            <TextView
                android:id="@+id/text_skinRemoveBlemishes"
                style="@style/beauty_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                style="@style/beauty_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skinSaturation" />

            <SeekBar
                android:id="@+id/seekbar_skinSaturation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

            <TextView
                android:id="@+id/text_skinSaturation"
                style="@style/beauty_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                style="@style/beauty_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skinTenderness" />

            <SeekBar
                android:id="@+id/seekbar_skinTenderness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

            <TextView
                android:id="@+id/text_skinTenderness"
                style="@style/beauty_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0" />

        </TableRow>

    </TableLayout>

</LinearLayout>