<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/half_transparent_black"
    android:orientation="vertical"
    android:padding="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/part_beauty"
                android:textColor="@android:color/white"
                android:layout_marginBottom="6dp"/>

            <ImageView
                android:id="@+id/switch_beauty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:src="@drawable/guan"
                android:layout_marginBottom="6dp"/>

    <TableLayout
        android:id="@+id/layout_beauty_adjust_second"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                style="@style/beauty_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eyemagnify" />

            <SeekBar
                android:id="@+id/seekbar_eyemagnify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/text_eyemagnify"
                style="@style/beauty_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                style="@style/beauty_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faceSculpt" />

            <SeekBar
                android:id="@+id/seekbar_faceSculpt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

            <TextView
                android:id="@+id/text_faceSculpt"
                style="@style/beauty_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0" />

        </TableRow>

    </TableLayout>

</LinearLayout>